--- a/myapp/Public/index.html
+++ b/myapp/Public/index.html
@@ -13,6 +13,19 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            
+            <!-- markup da mettere nello script -->
+            <div class="card">
+                <div class="card-img">
+                    <img src="" class="api-img" alt="immagine post casuale">
+                </div>
+                <div class="card-desc">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- link script pubblico -->
     <script src="./assets/main.js"></script>
